# ConvBase

./: CMakeLists.txt  README.md
include/: cifar10_loader.hpp  loader.hpp  net.hpp  operator.hpp  solver.hpp  tensor4d.hpp
include/loaders/: cifar10_loader.hpp
include/operators/: convolution.hpp  im2col.hpp  pooling.hpp  relu.hpp  reshape.hpp  softmax_cross_entropy.hpp
include/tests/: tensor4d_file_manager.hpp
nets/: C32_P2_C32_P2_C32_P2_FC128_FC10.convbase
scripts/: classify_directory.sh  download_cifar10.sh  download_eigen.sh  download_images_net.sh  make_conv_base.sh  make_convbase.sh
solvers/: test.txt  train.txt
src/: cifar10_loader.cpp  classify_image.cpp  classify_images.cpp  main.cpp  net.cpp  solver.cpp
src/loaders/: cifar10_loader.cpp
src/operators/: convolution.cpp  im2col.cpp  pooling.cpp  relu.cpp  reshape.cpp  softmax_cross_entropy.cpp
src/tests/: compute_net.cpp  tensor4d_file_manager.cpp
src/tests/compare/convolution/: compare_convolution.py  compute_convolution.cpp  compute_convolution.py
src/tests/compare/pooling/: compare_pooling.py
